--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -15,7 +15,7 @@
         {% endif %}
     </div>
     <div>
-        <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
-        <img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat" />
+        <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" height="300"/>
+        <img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat" height="300"/>
     </div>
 {% endblock %}
