--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -12,7 +12,6 @@
             howdy {{ user.username }}!
         {% else %}
             hey there partner! <br />
-            <strong>{{ boldmessage }}</strong><br />
         {% endif %}
     </div>
 
@@ -42,5 +41,5 @@
         {% endif %}
     </div>
 
-    <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
+    <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" height="300"/>
 {% endblock %}
